[gd_scene load_steps=6 format=2]

[ext_resource path="res://core/env_models/BoatSimple.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/player_boat/PlayerBoat.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=5]
radius = 3.0

[sub_resource type="SphereShape" id=6]
radius = 4.0

[sub_resource type="BoxShape" id=4]

[node name="PlayerBoat" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.639613, 0 )
collision_layer = 2
axis_lock_motion_y = true
move_lock_y = true
script = ExtResource( 2 )

[node name="FishPickupArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="FishPickupArea"]
shape = SubResource( 5 )

[node name="StockGasArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 24

[node name="CollisionShape" type="CollisionShape" parent="StockGasArea"]
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.73065, -1.0224 )
shape = SubResource( 4 )

[node name="gfx" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="FishPickupArea" to="." method="_on_FishPickupArea_body_entered"]
[connection signal="body_exited" from="FishPickupArea" to="." method="_on_FishPickupArea_body_exited"]
[connection signal="body_entered" from="StockGasArea" to="." method="_on_StockArea_body_entered"]
[connection signal="body_exited" from="StockGasArea" to="." method="_on_StockGasArea_body_exited"]
